--- a/Home.html
+++ b/Home.html
@@ -175,9 +175,9 @@
         <h2 class="nombre-empres">Restaurante y Servicio a Domicilio</h2>
       </a>
       <nav>
-        <a href="Home">Home</a>
-        <a href="Menu">Menú</a>
-        <a href="formularioPedido">Formulario de pedidos</a>
+        <a href="Home.html">Home</a>
+        <a href="Menu.html">Menú</a>
+        <a href="formularioPedido.html">Formulario de pedidos</a>
         <a href="#">Acerca de nosotros</a>
         <a href="#">Contacto</a>
       </nav>
