--- a/Home.html
+++ b/Home.html
@@ -213,7 +213,7 @@
         <div class="Container">
           <p>
             <img class="Img-4" src="Imagenes/Img-4.jpg" alt="">
-            BIENVENIDOS A MONGO’S<br>
+            BIENVENIDOS A "NOMBRE DEL RESTAURANTE"<br>
             Un lugar diseñado especialmente para tí y tus ganas de pasarlo bien. Ven con tus amigos y disfruta del mejor ambiente, conviértete en el protagonista de la noche en nuestro karaoke o simplemente disfruta de nuestras deliciosas picadas. Anímate, que nunca sabes lo que la noche te tiene preparado.
           </p>
           </div>
